--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="container"></section>
 
 <!-- <script src="dist/js/index.js"></script> -->
 </body>
