--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
 
+<script src="dist/js/commons.js"></script>
 <script src="app/js/contact.js"></script>
 </body>
 </html>
