--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <link rel="stylesheet" href="dist/css/home.css"> -->
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <section id="container"></section>
 
-<!-- <script src="dist/js/index.js"></script> -->
+<script src="dist/js/commons.js"></script>
+<script src="dist/js/home.js"></script>
 </body>
 </html>
