--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="dist/css/contact.css">
     <title>Contact</title>
 </head>
 <body>
 
-<script src="dist/js/commons.js"></script>
+<script src="dist/js/modules.js"></script>
+<!-- <script src="dist/js/commons.js"></script> -->
 <script src="app/js/contact.js"></script>
 </body>
 </html>
