--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="dist/css/home.css"> -->
+    <link rel="stylesheet" href="dist/css/home.css">
     <title>Home</title>
 </head>
 <body>
     <section id="container"></section>
 
-<script src="dist/js/commons.js"></script>
+<!-- <script src="dist/js/commons.js"></script> -->
+<script src="dist/js/modules.js"></script>
 <script src="dist/js/home.js"></script>
 </body>
 </html>
